--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "config": "^1.30.0",
     "express": "^4.16.3",
     "handlebars": "^4.0.11",
     "mongoose": "^5.0.13",
+    "multer": "^1.3.0",
     "serve-static": "^1.13.2"
   }
 }
