--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "publicsf.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node publicsf.js"
   },
   "author": "",
   "license": "ISC",
