--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "config": "^1.30.0",
+    "csshake": "^1.5.3",
     "express": "^4.16.3",
     "handlebars": "^4.0.11",
     "mongoose": "^5.0.13",
