--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "mongoose": "^5.0.13",
     "multer": "^1.3.0",
     "serve-static": "^1.13.2"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.24.5"
   }
 }
