--- a/package.json
+++ b/package.json
@@ -7,19 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node publicsf.js"
   },
-  "author": "",
+  "author": "Jonathan Crawford",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "config": "^1.30.0",
-    "csshake": "^1.5.3",
-    "express": "^4.16.3",
-    "handlebars": "^4.0.11",
-    "mongoose": "^5.0.13",
-    "multer": "^1.3.0",
-    "serve-static": "^1.13.2"
+    "express": "^4.16.3"
   },
-  "devDependencies": {
-    "browser-sync": "^2.24.5"
-  }
+  "devDependencies": {}
 }
