--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "config": "^2.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "multer": "^1.3.1",
