--- a/package.json
+++ b/package.json
@@ -11,15 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "config": "^2.0.1",
-    "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "google-map-react": "^1.0.6",
     "multer": "^1.3.1",
-    "nodemailer": "^4.6.8",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "nodemailer": "^4.6.8"
   },
   "devDependencies": {}
 }
